--- a/Makefile.head
+++ b/Makefile.head
@@ -9,6 +9,8 @@ _DIST = Makefile
 _BINARY_DIST =
 _INSTALL =
 _UNINSTALL =
+_CLEAN =
+_DIST_CLEAN =
 DEP_DIR = .dep
 PROJECT = no_name
 VERSION = 0.0
@@ -64,8 +66,8 @@ $(1)_CMIO = $$(patsubst %.cmo,%.cmi,$$($(1)_CMO))
 _DEPS += $$(patsubst %.cmo,$(DEP_DIR)/%.d,$$($(1)_CMO)) \
 	 $$(patsubst %.mly,$(DEP_DIR)/%.mli.d,$$($(1)_MLYO))
 _PRE_DEPS += $$($(1)_MLO)
-_CLEAN += $(1).cma $$($(1)_CMO) \
-	$$($(1)_CMIO) \
+_DIST_CLEAN += $(1).cma $$($(1)_CMIO)
+_CLEAN += $$($(1)_CMO) \
 	$$(patsubst %.mll,%.ml,$$($(1)_MLLO)) \
 	$$(patsubst %.mly,%.ml,$$($(1)_MLYO)) \
 	$$(patsubst %.mly,%.mli,$$($(1)_MLYO))
@@ -93,9 +95,8 @@ $(1)_CMIX = $$(patsubst %.cmx,%.cmi,$$($(1)_CMX))
 _DEPS += $$(patsubst %.cmx,$(DEP_DIR)/%.d,$$($(1)_CMX)) \
 	 $$(patsubst %.mly,$(DEP_DIR)/%.mli.d,$$($(1)_MLYX))
 _PRE_DEPS += $$($(1)_MLX)
-_CLEAN += $(1).cmxa $(1).a \
-	$$($(1)_CMX) \
-	$$($(1)_CMIX) \
+_DIST_CLEAN += $(1).cmxa $(1).a $$($(1)_CMIX)
+_CLEAN += $$($(1)_CMX) \
 	$$(patsubst %.cmx,%.o,$$($(1)_CMX)) \
 	$$(patsubst %.mll,%.ml,$$($(1)_MLLX)) \
 	$$(patsubst %.mly,%.ml,$$($(1)_MLYX)) \
@@ -142,7 +143,8 @@ $(1)_MLYO = $$(filter %.mly,$(2))
 _DEPS += $$(patsubst %.cmo,$(DEP_DIR)/%.d,$$($(1)_CMO)) \
 	 $$(patsubst %.mly,$(DEP_DIR)/%.mli.d,$$($(1)_MLYO))
 _PRE_DEPS += $$($(1)_MLO)
-_CLEAN += $(1) $$($(1)_CMO) \
+_DIST_CLEAN += $(1)
+_CLEAN += $$($(1)_CMO) \
 	$$(patsubst %.cmo,%.cmi,$$($(1)_CMO)) \
 	$$(patsubst %.mll,%.ml,$$($(1)_MLLO)) \
 	$$(patsubst %.mly,%.ml,$$($(1)_MLYO)) \
@@ -151,7 +153,9 @@ _DIST += $(2)
 _BINARY_DIST += $(1)
 
 $(1): $$($(1)_CMO)
-	$$(OCAMLC) $$($(1)_LDFLAGS) $$(OCAMLC_LDFLAGS) -o $$@ $$($(1)_ CMO) $$(OCAMLC_LIBS)
+	@echo $$($(1)_MLO)
+	@echo $$($(1)_CMO)
+	$$(OCAMLC) $$($(1)_LDFLAGS) $$(OCAMLC_LDFLAGS) -o $$@ $$($(1)_CMO) $$(OCAMLC_LIBS)
 
 $(if $(findstring no_install,$(3)),,$(call ocaml_install_bin,$(1)))
 
@@ -167,8 +171,8 @@ $(1)_MLYX = $$(filter %.mly,$(2))
 _DEPS += $$(patsubst %.cmx,$(DEP_DIR)/%.d,$$($(1)_CMX)) \
 	 $$(patsubst %.mly,$(DEP_DIR)/%.mli.d,$$($(1)_MLYX))
 _PRE_DEPS += $$($(1)_MLX)
-_CLEAN += $(1) \
-	$$($(1)_CMX) \
+_DIST_CLEAN += $(1)
+_CLEAN += $$($(1)_CMX) \
 	$$(patsubst %.cmx,%.cmi,$$($(1)_CMX)) \
 	$$(patsubst %.cmx,%.o,$$($(1)_CMX)) \
 	$$(patsubst %.mll,%.ml,$$($(1)_MLLX)) \
