--- a/frontc/Makefile
+++ b/frontc/Makefile
@@ -1,6 +1,7 @@
 # $Id$
 include ../Makefile.head
 
+# Library
 SOURCES = \
 	cabs.ml \
 	cxml.ml \
@@ -12,4 +13,22 @@ SOURCES = \
 
 $(eval $(call ocaml_lib,frontc,$(SOURCES)))
 
+INSTALL_AFTER += install_doc
 include ../Makefile.tail
+
+
+# Documentation
+DOCS = \
+	cabs.ml \
+	cxml.ml \
+	cprint.ml \
+	ctoxml.ml \
+	frontc.ml
+
+DOC_FLAGS=-colorize-code -I .
+doc:
+	ocamldoc -html -d ../autodoc  -t "FrontC" $(DOCS)
+
+install_doc: doc $(DATA_DIR)
+	cp -R ../autodoc $(DATADIR)
+	
