repacks frontc into three independent packages
The printc command is no longer installed. The `ctoxml` and `calipso`
packages are distributed in separate packages.

--- a/calipso/dune
+++ b/calipso/dune
@@ -1,4 +1,19 @@
 (executable
-  (name calipso)
-  (public_name calipso)
-  (libraries FrontC))
+ (package calipso)
+ (name calipso)
+ (public_name calipso)
+ (libraries FrontC calipso)
+ (modules calipso))
+
+(executable
+ (package calipso)
+ (name stat)
+ (public_name calipso_stat)
+ (libraries FrontC calipso)
+ (modules stat))
+
+(library
+ (name calipso)
+ (wrapped false)
+ (modules algo gen label reduce)
+ (libraries FrontC))
