--- a/calipso.opam
+++ b/calipso.opam
@@ -4,6 +4,7 @@ version: "4.0.0"
 synopsis: "Rewrites C programs to remove non-structured control-flow"
 description:
   "Calipso analyzes programs in order to replace all nonstructured instructions (i.e., break, return, switch...) by branches and, then, remove all branches. See https://dblp.org/rec/journals/tsi/CasseFRS02 for more details"
+maintainer: ["Ivan Gotovchits <ivg@ieee.org>"]
 authors: ["Hugues Cassé <casse@irit.fr> et al"]
 license: "LGPL-2.0-only"
 tags: ["FrontC" "C" "analysis"]
