--- a/ctoxml.opam
+++ b/ctoxml.opam
@@ -2,6 +2,7 @@
 opam-version: "2.0"
 version: "4.0.0"
 synopsis: "Parses a C program into Cabs AST and dumps as an XML document"
+maintainer: ["Ivan Gotovchits <ivg@ieee.org>"]
 authors: ["Hugues Cassé <casse@irit.fr> et al"]
 license: "LGPL-2.0-only"
 tags: ["FrontC" "C" "parser" "XML"]
