--- a/ctoxml/dune
+++ b/ctoxml/dune
@@ -5,10 +5,7 @@
   (libraries FrontC))
 
 (env
- (_ (binaries (./ctoxml_bin.exe as ctoxml))))
-
+ (_ (binaries (./ctoxml as ctoxml))))
 
 (cram
-  (package ctoxml)
-  (applies_to test)
   (deps %{bin:ctoxml}))
