--- a/FrontC.opam
+++ b/FrontC.opam
@@ -11,7 +11,7 @@ tags: ["FrontC" "C" "parser" "XML"]
 homepage: "https://github.com/BinaryAnalysisPlatform/FrontC"
 bug-reports: "https://github.com/BinaryAnalysisPlatform/FrontC/issues"
 depends: [
-  "dune" {>= "2.8" & >= "2.8"}
+  "dune" {>= "2.7"}
   "menhir"
   "odoc" {with-doc}
 ]
